force-app/main/default/objects/Fee_Master__mdt/Fee_Master__mdt.object-meta.xml
<CustomObject>
    <label>Fee Master</label>
    <pluralLabel>Fees Master</pluralLabel>
</CustomObject>