force-app/main/default/objects/Fee_Master__mdt/fields/Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>Amount_Value__c</fullName>
    <label>Amount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>