force-app/main/default/objects/Fee_Master__mdt/fields/Fee_Name__c.field-meta.xml
<CustomField>
    <fullName>Fee_Name__c</fullName>
    <label>Fee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>