force-app/main/default/objects/Fee_Master__mdt/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BL</fullName>
                <default>true</default>
                <label>BL</label>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>