force-app/main/default/objects/Fee_Master__mdt/fields/LOB_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>LOB_Sub_Type__c</fullName>
    <label>LOB Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CV-New</fullName>
                <default>true</default>
                <label>CV-New</label>
            </value>
            <value>
                <fullName>CE-New</fullName>
            </value>
            <value>
                <fullName>CV-Used, CE-Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>