force-app/main/default/objects/Fee_Master__mdt/fields/Percentage_Of__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Of__c</fullName>
    <defaultValue>&apos;Loan_Amount__c&apos;</defaultValue>
    <label>Percentage Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>