force-app/main/default/objects/Fee_Master__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KYC Validation &amp; Dedupe Pending</fullName>
                <default>true</default>
                <label>KYC Validation &amp; Dedupe Pending</label>
            </value>
            <value>
                <fullName>CIBIL Initiation</fullName>
            </value>
            <value>
                <fullName>Document Verification</fullName>
            </value>
            <value>
                <fullName>DDE</fullName>
            </value>
            <value>
                <fullName>LAF Generation &amp; Consent</fullName>
            </value>
            <value>
                <fullName>Assigned to Credit</fullName>
            </value>
            <value>
                <fullName>PD in Progress</fullName>
            </value>
            <value>
                <fullName>Credit Assessment</fullName>
            </value>
            <value>
                <fullName>Recommended for Approval</fullName>
            </value>
            <value>
                <fullName>Disbursal In Progress</fullName>
            </value>
            <value>
                <fullName>Partially Disbursed</fullName>
            </value>
            <value>
                <fullName>Disbursed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>