force-app/main/default/objects/Fee_Master__mdt/fields/Vehicle_Classification__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Classification__c</fullName>
    <label>Vehicle Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M&amp;HCV</fullName>
                <default>true</default>
                <label>M&amp;HCV</label>
            </value>
            <value>
                <fullName>L&amp;ICV</fullName>
            </value>
            <value>
                <fullName>SCV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>